Iteration 3 Phase B: GC/safepoint overlay, JFR ingestion, JDK 21 JSON dumps
- --gc-log: unified-logging and JDK 8 PrintGCDetails parsers extract pause
  windows (start, duration, cause); pauses render as shaded markArea bands on
  the series charts; frozen-thread verdicts whose whole run coincides with
  pause windows are reattributed to the pause (discarded with an explanation,
  removed from the stuck table and swimlane); new long-gc-pause (>1s WARNING,
  >5s CRITICAL) and frequent-safepoints (>10% stopped time) findings
- JFR: tda analyze recording.jfr (magic/extension detect) streams
  jdk.ExecutionSample/NativeMethodSample via RecordingFile into time-sliced
  synthetic dumps (default 1s, --jfr-slice, auto-widens to cap ~300 dumps)
  fed to the unchanged engine; jdk.ThreadPark/JavaMonitorEnter aggregate into
  a lock-contention section; jdk.VirtualThreadPinned becomes a WARNING finding
- JDK 21+ JSON dump format (Thread.dump_to_file -format=json): the only format
  with virtual threads - platform/virtual tiles, carrier->virtual mapping
  table, tolerant of JDK 21/22 field evolution (state/carrier optional)
- Tests: both GC formats incl. nested-paren causes and [Times:] tails,
  pause-overlap reattribution asserted, in-test jdk.jfr.Recording round trip,
  JSON fixture with 4 virtual threads on 2 carriers (68 total)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0121goHt35eK1JkeRybCj4kF